base-installer (1.62) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * RiscPC has been renamed from riscpc to rpc.

  [ Colin Watson ]
  * Add empty binary-indep target in debian/rules, per policy.

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 03 Jul 2006 07:10:04 +0200

base-installer (1.61) unstable; urgency=low

  [ David Härdeman ]
  * If we have any dm-crypt devices, install cryptsetup before the
    initramfs image is generated. Closes: #375928.

  [ Updated translations ]
  * Estonian (et.po) by Siim Põder
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Frans Pop <fjp@debian.org>  Fri, 30 Jun 2006 13:55:39 +0200

base-installer (1.60) unstable; urgency=low

  * Support finish-install, both by installing the script there and for
    searching for templates in its namespace in the fallback code for
    post-base-installer hooks.

  [ Updated translations ]
  * Lithuanian (lt.po) by Kęstutis Biliūnas

 -- Joey Hess <joeyh@debian.org>  Mon,  5 Jun 2006 18:14:17 -0400

base-installer (1.59) unstable; urgency=low

  * Fix a mistake in the initramfs-tools confdir renaming code, thanks makx.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Jun 2006 19:26:12 -0400

base-installer (1.58) unstable; urgency=low

  [ Joey Hess ]
  * Remove some unncessary debug logging.
  * Support initramfs-tools renaming its confdir by testing which directory
    exists. Required moving some code around so it runs only after
    initramfs-tools is installed.

  [ Bastian Blank ]
  * Use initrd for s390.
  * Update kernel list for s390.

 -- Bastian Blank <waldi@debian.org>  Thu,  1 Jun 2006 10:14:37 +0200

base-installer (1.57) unstable; urgency=low

  [ Frans Pop ]
  * Create devmapper device nodes in /target if these are used in the installer;
    needed for partman crypto (closes: #365747). Patch by Riku Voipio.
  * If root is encrypted, also create crypto device nodes. Patch by David
    Härdeman.

  [ Martin Michlmayr ]
  * Remove incomplete LART and BAST support.