@@ -1,0 +1,12 @@
+subarch rpc
+cpuinfo rpc.cpuinfo
+majors 2.6
+flavour rpc
+kernel-2.6 linux-image-2.6-rpc
+usable \
+  linux-image-2.6-rpc
+unusable \
+  linux-image-2.6-ixp4xx \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-nslu2 \
+  linux-image-2.6-s3c2410
