@@ -2,6 +2,7 @@ base-installer (1.62) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * RiscPC has been renamed from riscpc to rpc.
+  * Add RiscPC to the testsuite.
 
   [ Colin Watson ]
   * Add empty binary-indep target in debian/rules, per policy.
